--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@metro-mde/logger": "^4.1.1",
+    "@prisma/client": "^5.2.0",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -27,6 +28,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
+    "prisma": "^5.2.0",
     "ts-node": "^10.9.1"
   }
 }
